# Theo-IDE

./: .editorconfig  .gitignore  .gitmodules  .guix-channel  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  dprint.json  guix.scm
.guix/modules/: theoide-package.scm
src/app/: CMakeLists.txt  main.cpp  main.qml
src/app/Example/Chat/Components/: CMakeLists.txt  ContactPage.qml  ConversationPage.qml  sqlcontactmodel.hpp  sqlconversationmodel.cpp  sqlconversationmodel.hpp
src/app/TheoIDE/Controls/: ApplicationMessageDialog.qml  CMakeLists.txt  ClosableTabButton.qml  CodeEditor.qml  DebugControls.qml  ExecutionStatePanel.qml  LabeledControl.qml  LineInfoCell.qml  LineInfoColumn.qml  PlainTextEditor.qml  ResultTable.qml  TabContent.qml  TableCell.qml  editormodel.cpp  executionstate.cpp  lineinfocolumnmodel.cpp  lineinfocolumnmodel.hpp  messagedialogmodel.cpp  tabmodel.cpp  variablessatemodel.cpp  variablesstatemodel.cpp
src/app/TheoIDE/Controls/include/: editormodel.hpp  executionstate.hpp  lineinfocolumnmodel.hpp  messagedialogmodel.hpp  tabmodel.hpp  variablesstatemodel.hpp
src/app/TheoIDE/Models/: CMakeLists.txt  compilerservice.cpp  dialogbutton.cpp  dialogservice.cpp  filesystemservice.cpp  messagedialogdto.cpp  virtualmachineservice.cpp
src/app/TheoIDE/Models/include/: compilerservice.hpp  dialogbutton.hpp  dialogservice.hpp  filesystemservice.hpp  messagedialogdto.hpp  virtualmachineservice.hpp
src/app/TheoIDE/Pages/: CMakeLists.txt  EditorPage.qml
src/app/TheoIDE/Persistence/: ApplicationSettings.qml  CMakeLists.txt  ThemeSettings.qml  systemfontconfiguration.cpp
src/app/TheoIDE/Persistence/include/: systemfontconfiguration.hpp
src/app/components/: ContactPage.qml  ConversationPage.qml
src/app/icons/: icons.qrc
src/app/icons/appicon/: AppIcon-Windows.rc  AppIcon.icns
src/app/icons/theoide-material/: index.theme
src/app/models/: sqlcontactmodel.cpp  sqlcontactmodel.hpp  sqlconversationmodel.cpp  sqlconversationmodel.hpp
